--- a/app/src/main/res/layout/single_player.xml
+++ b/app/src/main/res/layout/single_player.xml
@@ -17,6 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:visibility="visible" />
 
     </LinearLayout>
 
