--- a/app/src/main/res/layout/activity_menu_multiplayer.xml
+++ b/app/src/main/res/layout/activity_menu_multiplayer.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_app"
-    tools:context=".Menu_multiplayer"
-    >
+    tools:context=".Menu_multiplayer">
 
 
     <Button
@@ -78,8 +77,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-    />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
