--- a/app/src/main/res/layout/activity_menu_multiplayer.xml
+++ b/app/src/main/res/layout/activity_menu_multiplayer.xml
@@ -74,6 +74,7 @@
         android:fontFamily="casual"
         android:text="Start Game"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
