--- a/app/src/main/res/layout/multi_player.xml
+++ b/app/src/main/res/layout/multi_player.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,6 +32,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/myball" />
+
+    <ImageView
+        android:id="@+id/life1"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/myball"
+        android:longClickable="false"
+        android:visibility="invisible"
+        app:layout_anchor="@+id/screen"
+        app:layout_anchorGravity="end|top" />
+
+    <ImageView
+        android:id="@+id/life2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/myball"
+        android:longClickable="false"
+        android:visibility="invisible"
+        app:layout_anchor="@+id/life1" />
+
+    <ImageView
+        android:id="@+id/life3"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="55dp"
+        android:background="@drawable/myball"
+        android:longClickable="false"
+        android:visibility="invisible"
+        app:layout_anchor="@+id/life2" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
