--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,19 +74,19 @@
 
     <ImageView
         android:id="@+id/audioOn"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/audioon" />
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        app:srcCompat="@drawable/audioon"
+        tools:layout_editor_absoluteX="173dp"
+        tools:layout_editor_absoluteY="565dp" />
 
     <ImageView
         android:id="@+id/audioOff"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/audiooff" />
+        app:srcCompat="@drawable/audiooff"
+        tools:layout_editor_absoluteX="173dp"
+        tools:layout_editor_absoluteY="565dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
