--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,22 +74,26 @@
 
     <ImageView
         android:id="@+id/audioOn"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_ABT"
-        app:layout_constraintVertical_bias="0.174"
-        app:srcCompat="@drawable/audioon"
-        tools:layout_editor_absoluteX="173dp" />
+        app:layout_constraintVertical_bias="0.177"
+        app:srcCompat="@drawable/audioon" />
 
     <ImageView
         android:id="@+id/audioOff"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_marginBottom="104dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="116dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/audiooff"
-        tools:layout_editor_absoluteX="173dp" />
+        app:layout_constraintEnd_toEndOf="@+id/audioOn"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/audiooff" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
