--- a/app/src/main/res/layout/multi_player.xml
+++ b/app/src/main/res/layout/multi_player.xml
@@ -25,7 +25,39 @@
             android:layout_weight="1"
             tools:visibility="visible" />
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/retry"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:layout_marginEnd="28dp"
+                android:layout_weight="1"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/retry"
+                tools:layout_editor_absoluteY="300dp" />
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:layout_marginBottom="280dp"
+                android:layout_weight="1"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/retry"
+                app:layout_constraintHorizontal_bias="0.596"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/back" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
+
+
 
     <ImageView
         android:id="@+id/ball"
