--- a/app/src/main/res/layout/multi_player.xml
+++ b/app/src/main/res/layout/multi_player.xml
@@ -37,22 +37,38 @@
                 android:layout_marginEnd="28dp"
                 android:layout_weight="1"
                 android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/retry"
-                tools:layout_editor_absoluteY="300dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/retry" />
 
             <ImageView
                 android:id="@+id/back"
                 android:layout_width="160dp"
                 android:layout_height="160dp"
-                android:layout_marginBottom="280dp"
                 android:layout_weight="1"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/retry"
                 app:layout_constraintHorizontal_bias="0.596"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/back" />
+
+            <TextView
+                android:id="@+id/winner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="200dp"
+                android:text="WINNER:"
+                android:textAlignment="center"
+                android:textColor="#FF9100"
+                android:textSize="100sp"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
