--- a/app/src/main/res/layout/multi_player.xml
+++ b/app/src/main/res/layout/multi_player.xml
@@ -59,13 +59,13 @@
                 android:id="@+id/winner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="80dp"
                 android:text="WINNER:"
                 android:textAlignment="center"
                 android:textColor="#FF9100"
                 android:textSize="50sp"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
