--- a/app/src/main/res/layout/activity_menu_multiplayer.xml
+++ b/app/src/main/res/layout/activity_menu_multiplayer.xml
@@ -13,6 +13,7 @@
         android:layout_width="374dp"
         android:layout_height="36dp"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="128dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/rounded_corners"
@@ -21,6 +22,7 @@
         android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -28,6 +30,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="24dp"
         android:layout_marginEnd="188dp"
         android:backgroundTint="#FFFFFF"
         android:fontFamily="casual"
@@ -38,6 +41,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.091" />
 
@@ -55,6 +59,7 @@
         android:id="@+id/Buttoncor"
         android:layout_width="126dp"
         android:layout_height="53dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/rounded_corners"
         android:fontFamily="casual"
@@ -62,6 +67,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/newPlayerInput"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.089" />
 
